Chrome z-index bug fixed

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ main {
   background: linear-gradient(180deg, #0042e6 -14.16%, #100e17 100%);
   background: -webkit-gradient(180deg, #0042e6 -14.16%, #100e17 100%);
   position: absolute;
-  z-index: 0;
+  z-index: 1;
   top: 0;
 }
 
@@ -98,6 +98,10 @@ main {
   margin: 1rem 2rem 0rem 2rem;
 }
 
+.projects-section {
+  position: relative;
+  z-index: 2;
+}
 .projects,
 .about {
   display: flex;
@@ -110,6 +114,7 @@ main {
   line-height: 2rem;
   font-weight: 700;
   margin-bottom: 2rem;
+  z-index: 2;
 }
 .project h2 {
   color: #1e90ff;
@@ -118,6 +123,7 @@ main {
   border: 3px solid #1e90ff;
   border-radius: 30px;
   width: 20rem;
+  z-index: 3;
 }
 .project .btn {
   width: 100%;
